@@ -1,28 +1,40 @@
-#!/usr/bin/env python2.7
-# Copyright (C) 2016 Daniel Asarnow
-# University of California, San Francisco
-#
-# Simple program for parsing and altering Relion .star files.
-# See help text and README file for more information.
-#
-# This program is free software: you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation, either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+# **************************************************************************
+# *
+# * Authors: Yunior C. Fonseca Reyna    (cfonseca@cnb.csic.es)
+# *
+# *
+# * Unidad de  Bioinformatica of Centro Nacional de Biotecnologia , CSIC
+# *
+# * This program is free software; you can redistribute it and/or modify
+# * it under the terms of the GNU General Public License as published by
+# * the Free Software Foundation; either version 2 of the License, or
+# * (at your option) any later version.
+# *
+# * This program is distributed in the hope that it will be useful,
+# * but WITHOUT ANY WARRANTY; without even the implied warranty of
+# * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# * GNU General Public License for more details.
+# *
+# * You should have received a copy of the GNU General Public License
+# * along with this program; if not, write to the Free Software
+# * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
+# * 02111-1307  USA
+# *
+# *  All comments concerning this program package may be sent to the
+# *  e-mail address 'scipion@cnb.csic.es'
+# *
+# **************************************************************************
+
+import re
+
 import emtable
 import numpy as np
 import os
 import argparse
 import json
 import sys
+
+from pyem.star import UCSF
 
 from pwem.emlib.image import ImageHandler
 from pwem.objects import (String, Integer, Transform, Particle,
@@ -53,17 +65,19 @@ def convertCs2Star(args):
             df = metadata.parse_cryosparc_2_cs(cs, passthroughs=args.input[1:],
                                                minphic=args.minphic,
                                                boxsize=args.boxsize,
-                                               swapxy=args.swapxy)
+                                               swapxy=args.swapxy,
+                                               invertx=args.invertx,
+                                               inverty=args.inverty)
         except (KeyError, ValueError) as e:
             log.error(e, exc_info=True)
-            log.error(
-                "Required fields could not be mapped. Are you using the right input file(s)?")
+            log.error("Required fields could not be mapped. Are you using the "
+                      "right input file(s)?")
             return 1
     else:
         log.debug("Detected CryoSPARC 0.6.5 .csv file")
         if len(args.input) > 1:
-            log.error(
-                "Only one file at a time supported for CryoSPARC 0.6.5 .csv format")
+            log.error("Only one file at a time supported for "
+                      "CryoSPARC 0.6.5 .csv format")
             return 1
         meta = metadata.parse_cryosparc_065_csv(
             args.input[0])  # Read cryosparc metadata file.
@@ -72,12 +86,20 @@ def convertCs2Star(args):
     if args.cls is not None:
         df = star.select_classes(df, args.cls)
 
+    if args.strip_uid is not None:
+        df = star.strip_path_uids(df, inplace=True, count=args.strip_uid)
+        df = strip_path_uids1(df, inplace=True, count=args.strip_uid)
+
     if args.copy_micrograph_coordinates is not None:
         df = star.augment_star_ucsf(df, inplace=True)
         coord_star = pd.concat(
             (star.parse_star(inp, keep_index=False, augment=True) for inp in
              glob(args.copy_micrograph_coordinates)), join="inner")
         key = star.merge_key(df, coord_star)
+        if key is None:
+            log.debug("Merge key not found, removing leading UIDs")
+            df = star.strip_path_uids(df, inplace=True)
+            key = star.merge_key(df, coord_star)
         log.debug("Coordinates merge key: %s" % key)
         if args.cached or key == star.Relion.IMAGE_NAME:
             fields = star.Relion.MICROGRAPH_COORDS
@@ -95,12 +117,29 @@ def convertCs2Star(args):
         r = np.array(json.loads(args.transform))
         df = star.transform_star(df, r, inplace=True)
 
-    # Write Relion .star file with correct headers.
-    df = star.remove_deprecated_relion2(df, inplace=True)
-    star.write_star(args.output, df, resort_records=True, optics=True)
+    if args.relion2:
+        df = star.remove_new_relion31(df, inplace=True)
+        star.write_star(args.output, df, resort_records=True, optics=False)
+    else:
+        df = star.remove_deprecated_relion2(df, inplace=True)
+        # Changing NaN values. These values denote erroneous coordinates
+        nanValues = len(df.rlnAnglePsi.values[np.isnan(df.rlnAnglePsi.values)])
+        if nanValues:
+            df.rlnAnglePsi.values[np.isnan(df.rlnAnglePsi.values)] = 0
+            log.warning("WARNING: %d dataframes contains erroneous "
+                        "coordinates. These coordinates are removed" % nanValues)
+        star.write_star(args.output, df, resort_records=True, optics=True)
 
     log.info("Output fields: %s" % ", ".join(df.columns))
     return 0
+
+
+def strip_path_uids1(df, inplace=False, count=-1):
+    df = df if inplace else df.copy()
+    pat = re.compile("[0-9]{21}_")
+    if UCSF.IMAGE_PATH in df:
+        df[UCSF.IMAGE_PATH] = df[UCSF.IMAGE_PATH].str.replace(pat, "", regex=True, n=count)
+    return df
 
 
 def defineArgs():
@@ -127,15 +166,23 @@ def defineArgs():
                         help="Source for micrograph paths and particle coordinates (file or quoted glob)",
                         type=str)
     parser.add_argument("--swapxy",
-                        help="Swap X and Y axes when converting particle coordinates",
+                        help="Swap X and Y axes when converting particle coordinates from normalized to absolute",
+                        action="store_true")
+    parser.add_argument("--invertx", help="Invert particle coordinate X axis",
+                        action="store_true")
+    parser.add_argument("--inverty", help="Invert particle coordinate Y axis",
                         action="store_true")
     parser.add_argument("--cached",
                         help="Keep paths from the Cryosparc 2+ cache when merging coordinates",
                         action="store_true")
     parser.add_argument("--transform",
-                        help="Apply rotation matrix or 3x4 rotation plus "
-                             "translation matrix to particles (Numpy format)",
+                        help="Apply rotation matrix or 3x4 rotation plus translation matrix to particles (Numpy format)",
                         type=str)
+    parser.add_argument("--relion2", "-r2", help="Relion 2 compatible outputs",
+                        action="store_true")
+    parser.add_argument("--strip-uid",
+                        help="Strip all leading UIDs from file names",
+                        nargs="?", default=0, type=int)
     parser.add_argument("--loglevel", "-l", type=str, default="WARNING",
                         help="Logging level and debug output")
     return parser
