@@ -59,7 +59,8 @@ Protocols SPA = [
 			{"tag": "section", "text": "more", "openItem": "False", "children": [
 			 {"tag": "protocol", "value": "ProtCryoSparcSubtract",  "text": "default"}]}
 		]},
-		{"tag": "protocol_group", "text": "Reconstruct", "openItem": "False", "children": []}
+		{"tag": "protocol_group", "text": "Reconstruct", "openItem": "False", "children": [
+		    {"tag": "protocol", "value": "ProtCryoSparcHomogeneousReconstruct",   "text": "default"}]}
 	]},
 	{"tag": "section", "text": "Tools", "openItem": "False", "children": [
 		{"tag": "protocol_group", "text": "Sets", "openItem": "False", "children": [
