@@ -27,6 +27,8 @@
 # **************************************************************************
 import os
 
+import emtable
+
 import pyworkflow.utils as pwutils
 from pyworkflow.object import String
 from pyworkflow.protocol.params import (PointerParam, FloatParam,
@@ -394,26 +396,25 @@ class ProtCryoSparcInitialModel(ProtCryosparcBase, ProtInitialVolume,
         """
         self._classesInfo = {}  # store classes info, indexed by class id
 
-        modelStar = md.MetaData(filename)
+        table = emtable.Table(fileName=filename)
 
-        for classNumber, row in enumerate(md.iterRows(modelStar)):
-            index, fn = cryosparcToLocation(row.getValue('rlnReferenceImage'))
+        for classNumber, row in enumerate(table.iterRows(filename)):
+            index, fn = cryosparcToLocation(row.get(RELIONCOLUMNS.rlnReferenceImage.value))
             # Store info indexed by id, we need to store the row.clone() since
             # the same reference is used for iteration
             scaledFile = self._getScaledAveragesFile(fn, force=True)
-            self._classesInfo[classNumber+1] = (index, scaledFile, row.clone())
+            self._classesInfo[classNumber+1] = (index, scaledFile, row)
 
     def _fillClassesFromIter(self, clsSet, filename):
         """ Create the SetOfClasses3D """
-        outImgsFn = 'images@' + self._getFileName('out_class')
-        self._loadClassesInfo(outImgsFn)
+        outImgsFn = 'particles@' + filename
+        self._loadClassesInfo(self._getFileName('out_class'))
         clsSet.classifyItems(updateItemCallback=self._updateParticle,
                              updateClassCallback=self._updateClass,
-                             itemDataIterator=md.iterRows('particles@'+ filename,
-                                                          sortByLabel=md.RLN_IMAGE_ID))
+                             itemDataIterator=emtable.Table.iterRows(outImgsFn))
 
     def _updateParticle(self, item, row):
-        item.setClassId(row.getValue(md.RLN_PARTICLE_CLASS))
+        item.setClassId(row.get(RELIONCOLUMNS.rlnClassNumber.value))
         item.setTransform(rowToAlignment(row, ALIGN_PROJ))
 
     def _updateClass(self, item):
