@@ -1,3 +1,4 @@
 scipy>=0.17.0
 numba<=0.47.0
 llvmlite<0.32.0
+emtable
